<resources>
    <string name="app_name">Randomancer 5e</string>
    <string name="action_settings">Settings</string>
    <string name="hey_guys">Erky is an inventor of mechanical things, he does things with his electrical strings.</string>
    <string name="username_prompt">Username</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="title_activity_about">About Randomancer</string>
    <string name="about_heading">About Randomancer 5e</string>
    <string name="about_description">This application was created by Shawn S. Hillyer. Latest source code and documentation can always be found at https://github.com/sshillyer/randomancer</string>
    <string name="login_headline">Log In</string>
    <string name="login_button_text">Log in</string>
    <string name="passwordLabel">Password</string>
    <string name="title_activity_create_character">Create Character</string>
    <string name="title_activity_view_characters">View Characters</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="gender_label">Gender</string>
    <string name="race_label">Race</string>
    <string name="skills_label">Skills</string>
    <string name="first_name_min_length">First name must be 2 or more characters.</string>
    <string name="create_account_button_text">Create Account</string>
    <string name="title_activity_create_account">Create Account</string>
    <string name="password_label">Password</string>
    <string name="password_hint">Minimum 5 characters</string>
    <string name="username_hint">Minimum 5 characters</string>
    <string name="title_activity_edit_character">EditCharacterActivity</string>

</resources>
